Fixed next stream spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,8 @@ body {
   z-index: 99;
   text-align:center;
   width: 100%;
-  padding: .5em .75em;
+  /* padding: .5em .75em; */
+  padding: 2em 1em;
 }
 
 #thoanny-twitch-events h5,
